--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -10,10 +10,10 @@
     <% end %>
     
     <% if logged_in?  %>
-      <% if !current_user.favorite(micropost) %>
-	       <%= link_to "add favorite", favorites_path(micropost_id: micropost.id) , method: :post %>
-	    <% else current_user.favorite(micropost)  %>
-	       <%= link_to "not favorite", favorites_path(micropost_id: micropost.id) , method: :delete %>
+      <% if current_user.favorite?(micropost) %>
+        <%= link_to "not favorite", favorites_path(micropost_id: micropost.id) , method: :delete %>
+	    <% else %>
+	      <%= link_to "add favorite", favorites_path(micropost_id: micropost.id) , method: :post %>   
 	    <% end %>     
 	  <% end %>
   </span>
