--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -11,9 +11,10 @@
     
     <% if logged_in?  %>
       <% if current_user.favorite?(micropost) %>
-        <%= link_to "not favorite", favorites_path(micropost_id: micropost.id) , method: :delete %>
+        <% @favorite = current_user.favorites.find_by(micropost_id: micropost.id) %>
+        <%= link_to "not favorite", favorite_path(@favorite) , method: :delete %>
 	    <% else %>
-	      <%= link_to "add favorite", favorites_path(micropost_id: micropost.id) , method: :post %>   
+	      <%= link_to "add favorite", favorites_path(micropost_id: micropost.id) , method: :post, class: 'fav' %>   
 	    <% end %>     
 	  <% end %>
   </span>
