--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -14,7 +14,9 @@
         <% @favorite = current_user.favorites.find_by(micropost_id: micropost.id) %>
         <%= link_to "not favorite", favorite_path(@favorite) , method: :delete %>
 	    <% else %>
-	      <%= link_to "add favorite", favorites_path(micropost_id: micropost.id) , method: :post, class: 'fav' %>   
+	      <%= link_to favorites_path(micropost_id: micropost.id) , method: :post , class: 'btn btn-default btn-sm' do %>
+        <span class="glyphicon glyphicon-star" aria-hidden="true"></span> add favorite
+        <% end %>
 	    <% end %>     
 	  <% end %>
   </span>
